Printing not working in daily 86.0a1. Spawns multiple printer selection dialogs without stopping.
Categories
(MailNews Core :: Printing, defect, P1)
Tracking
(thunderbird_esr78 unaffected, thunderbird86+ verified)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr78 | --- | unaffected |
| thunderbird86 | + | verified |
People
(Reporter: clochrua, Assigned: darktrojan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
383.04 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
rjl
:
approval-comm-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.96 Safari/537.36
Steps to reproduce:
Print does not work
Select any mail and "print" the mail
Actual results:
PRINT:
Normally one window with a printer list would be displayed.
With the printing subsystem as it MULTIPLE windows of the same printer list are displayed. See the attached screen shot.
A (random?) number of linux processes are started, one for each printer list displayed.
Eventually the total system grinds to a halt with too many processes.
Even though TB is being started with "-jsconsole" option, cannot switch to the jsconsole so can't tell what happened at the TB JS level.
Expected results:
A single printer list window should be displayed where I can select the printer to be used.
Prining has been broken in daily 86 for some time, however, the changes to 86.0a1 between Monday 18 Jan and Friday 22 Jan seem to have caused this change.
Comment 1•5 years ago
|
||
I can reproduce using 86.0a1 on Fedora 33 Workstation and Windows 10.
Updated•5 years ago
|
Comment 2•5 years ago
|
||
There's lot of (native) console spew about "too much recursion"
Comment 3•5 years ago
|
||
Regressed 2021-01-19 -> 2021-01-20, so this would be from tb-fission.
Comment 4•5 years ago
|
||
Ping will take a look unless someone already got started?
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
Comment 6•5 years ago
|
||
I think it's perhaps related to chromeFlags. https://searchfox.org/mozilla-central/rev/851bbbd9d9a38c2785a24c13b6412751be8d3253/toolkit/components/windowwatcher/nsWindowWatcher.cpp#835,842
We should not enter the if block and run ProvideWindow.
ProvideWindow will run https://searchfox.org/comm-central/rev/7922a3609264e98d1f190eb090d2bc7c1104b3bd/mail/base/content/mailWindow.js#816-817, which triggers a new print.
| Assignee | ||
Comment 7•5 years ago
|
||
There's two recursion loops here. First, nsMsgPrintEngine::Observe gets some notifications it
never got before E10s, which causes FireThatLoadOperation to happen more than it should. This
prevents the print progress dialog completing.
Second, nsBrowserAccess.getContentWindowOrOpenURI goes into a spin looking for somewhere to load
a message for printing. This stops the actual printing happening.
| Assignee | ||
Comment 8•5 years ago
|
||
https://phabricator.services.mozilla.com/D103009 is enough to fix printing of messages. Printing web pages doesn't work because of E10s, and I don't know what's wrong with address book and calendar printing.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/036520a38d2b
Fix message printing after tb-fission and bug 1685184. r=rnons
Comment 10•5 years ago
|
||
Comment on attachment 9199180 [details]
Bug 1688248 - Fix printing.
[Approval Request Comment]
Needed for beta to avoid printing horking up ones system.
Comment 11•5 years ago
|
||
Comment on attachment 9199180 [details]
Bug 1688248 - Fix printing.
[Triage Comment]
Approved for beta.
Comment 12•5 years ago
|
||
| bugherder uplift | ||
Thunderbird 86.0b1:
https://hg.mozilla.org/releases/comm-beta/rev/e850580ba6a5
Comment 13•5 years ago
|
||
On windows 10 I can confirm this is fixed in build2 of 86.0b1.
With build1 I eventually crashed bp-cbc843c6-d7a2-43b0-ac84-7f1300210128
Comment 14•5 years ago
|
||
I can verify Wayne's findings using 86.0b1 build2 Build ID 20210128005905 on Windows 10.
Description
•