Bug 1688248 - Fix message printing after tb-fission and bug 1685184. r=rnons

nsMsgPrintEngine::Observe gets some notifications it never got before E10s, which causes FireThatLoadOperation to happen more than it should. This prevents the print progress dialog completing.

Also a port of bug 1685184 which changed the arguments to PrintUtils.startPrintWindow.

Differential Revision: https://phabricator.services.mozilla.com/D103009

--HG--
extra : amend_source : b4e32e158010021d5c1b25bc44f2fad8f33685e3